fix: code word wrap

--- a/src/app.css
+++ b/src/app.css
@@ -36,6 +36,23 @@ h2#contents + ul ul > li:last-child {
   @apply mb-0;
 }
 
+/* prose headers */
+
+.prose h1,
+.prose h2,
+.prose h3,
+.prose h4,
+.prose h5,
+.prose h6,
+.prose-lg h1,
+.prose-lg h2,
+.prose-lg h3,
+.prose-lg h4,
+.prose-lg h5,
+.prose-lg h6 {
+  @apply text-balance;
+}
+
 /* re-style to override tailwind's styling */
 .mockup-code pre {
   padding: 0;
